<resources>
    <string name="app_name">RadixConversion</string>
    <string name="mode">Mode?</string>
    <string name="action_settings">Settings</string>
    <string name="convertFrom">Convert From?</string>
    <string name="convertTo">Convert To?</string>
    <string name="convertNum">Number to Convert?</string>
    <string name="goesHere">...result here...</string>
    <string name="convert">Convert</string>
    <string name="invalidInput">Invalid Input, Illegal Symbols or (Under|Over)flow</string>
    <string name="convertToEqualsConvertFrom">Not really converting anything but ok.</string>

    <string name="spinnerChange">Spinner Change</string>
    <string name="converFromSpinnerChange">Switched convert From to </string>
    <string name="convertToSpinnerChange">Switched convertTo to </string>

    <string name="mainActivityDescription">This main activity will convert between bases 2,10,16
    for 32bit integers in java. I\'ll likely add this for bytes in another activity.</string>

</resources>
