<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical" android:layout_width="match_parent"
              android:layout_height="match_parent">
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mode_textview"
            android:text="@string/mode"
            android:textSize="@dimen/textViewSize"
            android:textAlignment="center"/>
    <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mode_spinner"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/convertFrom_textview"
            android:text="@string/convertFrom"
            android:textSize="@dimen/textViewSize"
            android:textAlignment="center"/>
    <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/convertFrom_spinner"></Spinner>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/convertTo"
            android:text="@string/convertTo"
            android:textAlignment="center"
            android:textSize="@dimen/textViewSize"/>
    <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/convertTo_spinner"></Spinner>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/numberToConvert_textView"
            android:text="@string/convertNum"
            android:textSize="@dimen/textViewSize"
            android:textAlignment="center"/>
    <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/convertNum_editText"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/converted_textView"
            android:hint="@string/goesHere"
            android:textAlignment="center"
            android:textSize="@dimen/textViewSize"/>
    <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/convert_button"
            android:text="@string/convert"/>
    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/description_textview"
            android:text="@string/mainActivityDescription"/>
</LinearLayout>